# shob

./: .gitignore  Admin  CMakeLists.txt  CONTRIBUTING.md  README.md  _config.yml
.github/workflows/: cmake.yml  static.yml
code/: Admin  Data_stats_website  ShobTest.pm  officieuze_standen.pl  shob.pl  sport_search.pl  test.pl
code/Algorithm/: Diff.pm  diff.bat
code/Klaverjas/: OBasicRules.js  ODebug.js  OEnvironment.js  OHelp.js  OKaart.js  OMatchAdmin.js  OScore.js  OScreenAdmin.js  OSetAdmin.js  OSetAnalyse.js  OSjabloon.js  OStack.js  OStrategy.js  OTimer.js  change_settings.js  palmtop_scherm.html  web_kj_color_italic.js  web_kj_main.js  web_kj_preload.js
code/Shob/: Algemeen.pm  Bookmarks.pm  Foto.pm  Functions.pm  Klaverjas_Funcs.pm  Politiek.pm  SiteUpdater.pm  Stats_Website.pm  search.html  search_setup.pl  web_filters.pl
code/Shob_Tools/: Empty_Module.pm  Error_Handling.pm  General.pm  Html_Head_Bottum.pm  Html_Stuff.pm  Idate.pm  Settings.pm
code/Sport_Collector/: Archief_EK_WK_Voetbal.pm  Archief_Europacup_Voetbal.pm  Archief_Oefenduels.pm  Archief_Voetbal_Beker.pm  Archief_Voetbal_NL.pm  Archief_Voetbal_NL_Beslissingen.pm  Archief_Voetbal_NL_Standen.pm  Archief_Voetbal_NL_Topscorers.pm  Archief_Voetbal_NL_Uitslagen.pm  Bookmarks_Index.pm  Geel_Rood.pm  OS_Funcs.pm  OS_Schaatsen.pm  Stats_Eredivisie.pm  Teams.pm
code/Sport_Data/: NL_2018_grpA.csv  NL_2020_grpA.csv  NL_grpA.csv  clubs.csv  europacup_2017_2018.csv  europacup_2019_2020.csv  europacup_2020_2021.csv  landcodes.csv  oefenduels.csv  schaatsersH.csv  voetballers.csv
code/Sport_Functions/: AddMatch.pm  BekerReaders.pm  EcReaders.pm  EkWkReaders.pm  Filters.pm  Formats.pm  Get_Land_Club.pm  Get_Result_Standing.pm  InitSport.pm  ListRemarks.pm  List_Available_Pages.pm  NatLeagueReaders.pm  Overig.pm  Range_Available_Seasons.pm  Readers.pm  RemarkReaders.pm  Results2Standing.pm  Search.pm  Seasons.pm  XML.pm
code/cgibin/: add_u.pl  sport_search.pl
code/doc/: tech_doc_adressen.html  tech_doc_kj.html  tech_doc_shob.html
code/include/: samenvatting_phd.html
code/kj_img/: index.html
code/my_scripts/: countdown.js  sort_table.js  tools.js  validate_sport.js  xmldump.pl
code/test/: epsig.css  test.html
data/: Data_stats_website
data/bookmarks/: archive.csv  config.csv  current.csv
data/sport/: clubs.csv  landcodes.csv  oefenduels.csv  voetballers.csv
pages/: 404.shtml  anybrowser.html  bookmarks.html  bookmarks_computers.html  bookmarks_media.html  bookmarks_sport.html  bookmarks_treinen.html  countdown.js  cv.html  dank_u_wel.html  doit.txt  epsig.css  epsig.html  example.html  index.html  index_keep.html  kj_gfx_adam.html  kj_gfx_rdam.html  kj_klein_adam.html  kj_klein_rdam.html  kj_txt_adam.html  kj_txt_rdam.html  klaverjas_faq.html  overzicht.html  reactie.html  samenvatting_proefschrift.html  search.html  sort_table.js  sport.html  sport_schaatsen_OS_1994.html  sport_schaatsen_OS_1998.html  sport_schaatsen_OS_2002.html  sport_schaatsen_OS_2006.html  sport_schaatsen_OS_2010.html  sport_schaatsen_OS_2014.html  sport_schaatsen_OS_2018.html  sport_schaatsen_OS_2022.html  sport_schaatsen_OS_2026.html  sport_voetbal_EKD2022.html  sport_voetbal_EKD2025.html  (+182 more)
pages/include/: kj_code_gfx.js  kj_code_txt.js
pages/search/: search.setup
src/: DateTime.cpp  DateTime.h  csvReader.cpp  csvReader.h  dateAsString.h  dateFactory.cpp  footballCompetition.cpp  footballCompetition.h  footballMatch.h  itdate.cpp  itdate.h  readme.txt  results2standings.cpp  shob.cpp  shobDate.h  standings.cpp  standings.h  starEnum.h  xmlReader.cpp  xmlReader.h
src/shob.football/: filterInput.cpp  filterInput.h  filterResults.cpp  filterResults.h  footballCompetition.cpp  footballCompetition.h  footballMatch.cpp  footballMatch.h  leagueNames.cpp  leagueNames.h  results2standings.cpp  results2standings.h  route2final.cpp  route2final.h  route2finalFactory.cpp  route2finalFactory.h  standings.cpp  standings.h  starEnum.h  topscorers.cpp  topscorers.h
src/shob.football.test/: footballUnitTestExe.cpp  testFilterInput.cpp  testFilterInput.h  testFilterResults.cpp  testFilterResults.h  testFootballCompetition.cpp  testFootballCompetition.h  testResults2standings.cpp  testResults2standings.h  testTopscorers.cpp  testTopscorers.h
src/shob.general/: DateTime.cpp  DateTime.h  MathSupport.h  MultipleStrings.cpp  MultipleStrings.h  Season.cpp  Season.h  dateAsString.h  dateFactory.cpp  dateFactory.h  glob.cpp  glob.h  itdate.cpp  itdate.h  multipleStrings.cpp  multipleStrings.h  season.cpp  season.h  shobDate.cpp  shobDate.h  shobException.h  uniqueStrings.cpp  uniqueStrings.h
src/shob.general.test/: generalUnitTest.cpp  testDate.cpp  testDate.h  testGlob.cpp  testGlob.h  testSeason.cpp  testSeason.h  testUniqueStrings.cpp  testUniqueStrings.h  testUtils.h
src/shob.html/: funcs.cpp  funcs.h  language.h  settings.h  table.cpp  table.h  updateIfNewer.cpp  updateIfNewer.h
src/shob.html.test/: htmlUnitTestExe.cpp  testTable.cpp  testTable.h
src/shob.pages/: EkWkDate.cpp  EkWkDate.h  FormatEC.cpp  FormatEC.h  FormatEC_Factory.cpp  FormatEC_Factory.h  FormatNL.h  (+70 more)
src/shob.pages.test/: PagesUnitTest.cpp  TestFormatEC.cpp  TestFormatEC.h  TestFormatEkWk.cpp  TestFormatEkWk.h  TestFormatEkWkQf.cpp  TestFormatEkWkQf.h  TestFormatNL.cpp  TestFormatNL.h  TestFormatOs.cpp  TestFormatOs.h  TestFormatStatsEredivisie.cpp  TestFormatStatsEredivisie.h  TestFormatUnOfficial.cpp  TestFormatUnOfficial.h  TestTopMenu.cpp  TestTopMenu.h  pagesUnitTest.cpp  test_format_ec.cpp  test_format_ec.h  test_format_ekwk_qf.cpp  test_format_ekwk_qf.h  test_format_nl.cpp  test_format_nl.h  test_format_os.cpp  test_format_os.h  test_topmenu.cpp  test_topmenu.h
test/: cats.xml  testCsvReader.cpp  testCsvReader.h  testFootballCompetition.cpp  testFootballCompetition.h  testResults2standings.cpp  testXmlReader.cpp  testXmlReader.h  unitTestExe.cpp
(+425 files in other folders)
